Beskriv vad du ändrade

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IFK Stocksund Fysioterapi - Idrottsskador & Rehabilitering</title>
-    <meta name="description" content="Professionell fysioterapi för fotbollsspelare. Henrik Nilsson hjälper dig från skada till toppform med ortopedisk medicin, idrottsfysioterapi och rehabilitering." />
-    <meta name="author" content="IFK Stocksund" />
+    <title>Caselo Idrottsmedicin - Fysioterapi i Stockholm och Mariefred</title>
+    <meta name="description" content="Idrottsfysioterapi i Stockholm och Mariefred: skadebehandling, skadeförebyggande och prestationsoptimering." />
+    <meta name="author" content="Caselo Idrottsmedicin" />
 
-    <meta property="og:title" content="IFK Stocksund Fysioterapi - Idrottsskador & Rehabilitering" />
-    <meta property="og:description" content="Professionell fysioterapi för fotbollsspelare. Henrik Nilsson hjälper dig från skada till toppform." />
+    <meta property="og:title" content="Caselo Idrottsmedicin - Fysioterapi i Stockholm och Mariefred" />
+    <meta property="og:description" content="Idrottsfysioterapi i Stockholm och Mariefred: skadebehandling, skadeförebyggande och prestationsoptimering." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
